--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -38,21 +38,21 @@
     @apply text-blue-600;
   }
   .article h1 {
-    @apply text-4xl font-semibold my-4;
+    @apply text-3xl md:text-4xl font-bold my-4;
   }
   .article h2 {
-    @apply text-3xl font-semibold my-3;
+    @apply text-2xl md:text-3xl font-semibold my-3;
   }
   .article h3 {
-    @apply text-2xl font-semibold my-2;
+    @apply text-xl md:text-2xl font-semibold my-2;
   }
   .article h4 {
-    @apply text-xl font-semibold my-1;
+    @apply text-lg md:text-xl font-semibold my-1;
   }
   .article h5 {
-    @apply text-lg font-semibold;
+    @apply text-lg font-medium;
   }
   .article h6 {
-    @apply font-semibold;
+    @apply font-medium;
   }
 }
